# clas-stringspinner

./: .gitattributes  .gitignore  .gitmodules  .ignore  8317.patch  README.md  draw_mx.C  draw_mx_2.C  meson.build  meson.options  produce.clasLU.sh  produce.sh  pythia.env  run_jobs.rb  test_mx.sh
.github/: dependabot.yml  generate_usage_guide.sh  usage.html
.github/workflows/: ci.yml
beamo/: meson.build  test.cpp
config/: README.md  clas12.cmnd
doc/: setup.md
src/: CheckList.h  EventObjects.h  GenCut.h  Hipo.h  Kinematics.cpp  Kinematics.h  Lund.h  Tools.h  clas-stringspinner-slurm.rb  clas-stringspinner.cpp  hipo2tree.cpp  lund2tree.cpp  stringspinner.cpp
src/config/: README.md  beam_test.h  clas12.h  zeus.h
src/config/src/: common.cc  common.h
subprojects/stringspinner/: build.sh  meson.build  meson.options
subprojects/stringspinner/patches/: Makefile.patch
tests/: read_kinematics_tables.C  read_table_file.C
