project(
  'stringspinner',
  'cpp', 'fortran',
  meson_version: '>=1.2',
  default_options: {
    'cpp_std':   'c++11',
    'buildtype': 'release',
    'libdir':    'lib',
  },
  version: 'Comput.Phys.Commun. 292 (2023) 108886', # no version number, so use the publication reference instead; arXiv: https://arxiv.org/abs/2305.05058
)

# dependency pythia8

# headers
